@@ -18,36 +18,30 @@ Instrument - global params for entire instrument:
         - pan at pan_pitch_1
         - pan_pitch_2
         - pan at pan_pitch_2
--lfo 1 - assignment (off, finetune, tune, vol, pan, cutoff, resonance, left offset, right offset, both offset)
-        - waveform (sine, square, saw, triangle, random)
-        - rate
-        - depth
--lfo 2 - assignment (off, finetune, tune, vol, pan, cutoff, resonance, , left offset, right offset, both offset, lfo 1
-depth, lfo 1 rate, etc...)
-        - waveform (sine, square, saw, triangle, random)
-        - rate
-        - depth
--lfo 3 - assignment (off, finetune, tune, vol, pan, cutoff, resonance, , left offset, right offset, both offset, lfo 1
-depth, lfo 1 rate, etc...)
-        - waveform (sine, square, saw, triangle, random)
-        - rate
-        - depth
--lfo 4 - assignment (off, finetune, tune, vol, pan, cutoff, resonance, , left offset, right offset, both offset, lfo 1
-depth, lfo 1 rate, etc...)
-        - waveform (sine, square, saw, triangle, random)
-        - rate
-        - depth
--volume envelope data
--panning envelope data
--pitch envelope data
--filter envelope data
+-number of lfos
+-volume envelope index
+-panning envelope index
+-pitch envelope index
+-filter envelope index
+-number of envelopes
 -number of velocity splits (1-16)
 -number of samples (0-255)
-
+-lfo data
+-envelope data
 -velocity split data [0->number of splits, stored incrementally from lowest
 split to highest]
 -sample header data [0->number of samples]
 -sample data [0->number of samples]
+
+================================
+
+LFO data
+
+-lfo - assignment (off, finetune, tune, vol, pan, cutoff, resonance, , stereo phase offset, offset, both offset, lfo X
+depth, lfo X rate, etc...)
+- waveform (sine, square, saw, triangle, random)
+- rate
+- depth
 
 ================================
 
@@ -73,7 +67,13 @@ Envelope Point data
 Velocity split - global params across velocity split
 -volume (applied across entire split to compensate for velocity)
 -max velocity (for this split)
--sample keymap (array from c-0 to b-9 of sample indexes)
+-sample keymap (array from c-0 to b-9 of keyinfo)
+
+================================
+
+Keyinfo
+-sample number
+-pitch to map to
 
 ================================
 
@@ -83,8 +83,8 @@ Sample Header data
 -tune
 -finetune
 -number of beats in sample
--left offset (into sample, msec)
--right offset (into sample, msec)
+-offset (into sample, msec)
+-stereo phase offset (into sample, msec)
 -stretch bpm for sample
 -stretch sample duration (msec)
 -duration stretch mode - (none, use stretch bpm and # beats, use song sync
